src/test/ui/parser/removed-syntax-static-fn.stderr
error: expected one of `async`, `const`, `crate`, `default`, `existential`, `extern`, `fn`, `pub`, `type`, `unsafe`, or `}`, found `static`
  --> $DIR/removed-syntax-static-fn.rs:6:5
   |
LL | impl S {
   |         - expected one of 11 possible tokens here
LL |     static fn f() {}
   |     ^^^^^^ unexpected token

error: aborting due to previous error

